--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-#+title: Sample of Org
+#+title: Lisp Lessons
 #+author: 南山竹
 #+startup: entitiespretty
 #+latex_compiler: xelatex
@@ -14,13 +14,13 @@
 
 ** Tutorial
 
-*** Make executable
-
 #+BEGIN_SRC sh
-gambitc -exe x.scm
+# make executable
+make -Cgambitc/hi clean test
 #+END_SRC
 
 
-*** References
+** References
 - [[https://schemers.org/Documents/Standards/R5RS/HTML/][R5RS]]
 - [[http://www.gambitscheme.org/wiki/index.php/Main_Page][Gambit Main Page]]
+- [[http://www.iro.umontreal.ca/~gambit/doc/gambit.html#GSC][Gambit Manual]]
