--- a/README.org
+++ b/README.org
@@ -10,6 +10,15 @@
 #+latex_header: \usepackage[utf8x]{inputenc}
 
 
+* Common Lisp
+
+** Language
+*** fill-pointer
+
+**** References
+- [[https://www.cs.cmu.edu/Groups/AI/html/cltl/clm/node162.html][17.5. Fill Pointers]]
+** References
+- [[https://www.cs.cmu.edu/Groups/AI/html/cltl/clm/index.html][Common Lisp the Language, 2nd Edition]]
 * Gambit
 
 ** Tutorial
@@ -18,7 +27,6 @@
 # make executable
 make -Cgambitc/hi clean test
 #+END_SRC
-
 
 ** References
 - [[https://schemers.org/Documents/Standards/R5RS/HTML/][R5RS]]
