--- a/README.org
+++ b/README.org
@@ -32,3 +32,6 @@ make -Cgambitc/hi clean test
 - [[https://schemers.org/Documents/Standards/R5RS/HTML/][R5RS]]
 - [[http://www.gambitscheme.org/wiki/index.php/Main_Page][Gambit Main Page]]
 - [[http://www.iro.umontreal.ca/~gambit/doc/gambit.html#GSC][Gambit Manual]]
+* Chez
+
+https://scheme.com/tspl4/
